--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
 				<li>2012.03~2015.03 , middle school student, <a href="http://www.galmoe.ms.kr/">galmoe middle school</a></li>
 				<li>2015.03~2018.03 , high school student, <a href="http://woosung.hs.kr/">woosung high school</a></li>
 				<li>2018.03 ~ 2018.07 , kwangwoon University undergraduate student, <a href="http://www.kw.ac.kr/"> kwangwoon Univ &#128514;</a></li>
-				<li>2019.03 ~ 2020.05 , Sejong University undergraduate student, <a href="http://sejong.ac.kr/">Sejong University &#128525;</a><li>
+				<li>2019.03 ~ 2020.05 , Sejong University undergraduate student, <a href="http://sejong.ac.kr/">Sejong University &#128525;</a></li>
 			</ul>
 
 		<hr>
