--- a/picture.html
+++ b/picture.html
@@ -10,7 +10,7 @@
 		<h1>My Pictures</h1>
 		<figure>
 		<img src="imgs/withbro.jpg" width="30%" alt="Jeju picuture">
-		<figcaption>when i go to trip</figcaption>
+		<figcaption>when i went to trip</figcaption>
 	</figure>
 	</section>
 </body>
