--- a/hobby.html
+++ b/hobby.html
@@ -10,7 +10,7 @@
 		<h1>My Hobbies</h1>
 		<p>playing game <a href="https://www.pubg.com/ko/">battle ground</a></p>
 		<p>Facebook -><a href="https://www.facebook.com/hkjbrian"><i class="fab fa-facebook fa-2X"></i></a></p>
-		<p>Instagram <a href="https://www.instagram.com/hkjbrian/"><i class="fab fa-instagram-square fa-2X"></i></a></p>
+		<p>Instagram -> <a href="https://www.instagram.com/hkjbrian/"><i class="fab fa-instagram-square fa-2X"></i></a></p>
 	</section>
 </body>
 </html>
