--- a/photogallary.html
+++ b/photogallary.html
@@ -16,7 +16,7 @@
     onmouseover="showimg(this)" onmouseout="original(this)">
     <img src="imgs/twice2.jpg" alt="사나"
     onmouseover="showimg(this)" onmouseout="original(this)">
-    <img src="imgs/twice3.jpg" alt="정연"
+    <img src="imgs/twice3.JPG" alt="정연"
     onmouseover="showimg(this)" onmouseout="original(this)">
     <img src="imgs/twice4.jpg" alt="다현"
     onmouseover="showimg(this)" onmouseout="original(this)">
